documentaçao e autenticaçao de usuario concluidos
